# skellington

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: architecture.md  learning_guide.md  mcp_guide.md
docs/agents/: jack.md
src/skellington/: __init__.py  main.py
src/skellington/agents/: __init__.py  jack.py  mayor.py  oogie.py  sally.py  validators.py  zero.py
src/skellington/agents/mayor/: __init__.py  agent.py
src/skellington/agents/mayor/skills/: __init__.py  documentation.py  formatting.py  visualization.py
src/skellington/agents/oogie/: __init__.py  agent.py
src/skellington/agents/oogie/skills/: __init__.py  analysis.py  search.py  summarization.py
src/skellington/agents/sally/: __init__.py  agent.py
src/skellington/agents/sally/skills/: __init__.py  imports.py  styling.py  testing.py
src/skellington/core/: __init__.py  agent.py  config.py  llm.py  memory.py  orchestrator.py  subagent.py  types.py
src/skellington/mcp_servers/: __init__.py
src/skellington/mcp_servers/code_exec/: __init__.py  server.py
src/skellington/mcp_servers/database/: __init__.py  server.py
src/skellington/mcp_servers/docs/: __init__.py  server.py
src/skellington/mcp_servers/filesystem/: __init__.py  client.py  server.py  tools.py
src/skellington/mcp_servers/git_server/: __init__.py  server.py
src/skellington/mcp_servers/websearch/: __init__.py  server.py  tools.py
src/skellington/subagents/: __init__.py  codegen.py  compare.py  context.py  dependency.py  diff.py  file_explorer.py  formatter.py  lint.py  planner.py  refactor.py  router.py  scaffold.py  search.py  security.py  status.py  summary.py  test_runner.py
src/skellington/ui/: __init__.py  cli.py
src/skellington/ui/web/: __init__.py  app.py
src/skellington/ui/web/templates/: index.html
src/skellington/utils/: __init__.py  json_utils.py  logging.py  themes.py
tests/: conftest.py
tests/test_agents/: test_jack.py  test_jack_phase2.py  test_mayor.py  test_oogie.py  test_sally.py  test_validators.py  test_zero.py
tests/test_core/: test_config.py  test_events.py  test_json_utils.py  test_types.py
tests/test_mcp_servers/: test_filesystem.py  test_filesystem_client.py  test_filesystem_tools.py
tests/test_subagents/: test_codegen.py  test_compare.py  test_context.py  test_dependency.py  test_diff.py  test_file_explorer.py  test_formatter.py  test_lint.py  test_parallel.py  test_refactor.py  test_scaffold.py  test_search.py  test_security.py  test_status.py  test_summary.py  test_test_runner.py
tests/test_ui/: test_websocket.py
