[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skellington"
version = "0.1.0"
description = "A multi-agent AI orchestration framework where each agent is a Halloween-ized Christmas character"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "skellington contributors" },
]
keywords = ["ai", "agents", "mcp", "llm", "orchestration", "halloween", "christmas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "litellm>=1.50.0",         # Multi-provider abstraction

    # MCP
    "mcp>=1.0.0",              # Model Context Protocol SDK

    # Data validation & settings
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.8.0",

    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",

    # Database / memory
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # HTTP / web search
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",          # Retry logic
    "structlog>=24.0.0",        # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",            # For FastAPI test client
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "pre-commit>=3.8.0",
    "ipython>=8.0.0",
]
local = [
    "ollama>=0.3.0",           # Local model support via Ollama
]

[project.scripts]
skellington = "skellington.main:app"
skel = "skellington.main:app"

[project.urls]
Homepage = "https://github.com/skazler/skellington"
Repository = "https://github.com/skazler/skellington"
Issues = "https://github.com/skazler/skellington/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skellington"]

# --- Ruff (linting + formatting) ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["skellington"]

# --- Black ---
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

# --- MyPy ---
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: spawns real subprocesses (slower, cross-platform-sensitive)",
]

# --- Coverage ---
[tool.coverage.run]
source = ["src/skellington"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false